--- a/css/styles.css
+++ b/css/styles.css
@@ -131,7 +131,14 @@ p {
         float: left;
     }
 }
+.footer {
+  /*overflow: auto;*/
+  /*height: 30px;*/
+}
 #footer-container{
+  overflow: auto;
+
+  height: inherit;
   width: 90%;
   padding-top: 5px;
   padding-bottom: 5px;
